# alif_ensemble-cmsis-dfp

./: AlifSemiconductor.Ensemble.pdsc  README.md  gen_pack.sh
.github/workflows/: pack.yml
Alif_CMSIS/Include/: Camera_Sensor.h  Driver_ADC.h  Driver_CMP.h  Driver_DAC.h  Driver_I2C_EX.h  Driver_I3C.h  Driver_IMU.h  Driver_IO.h  Driver_ISP.h  Driver_OSPI.h  Driver_PDM.h  Driver_SPI_EX.h  Driver_USART_EX.h  Driver_UTIMER.h  dma_opcode.h  evtrtr.h
Alif_CMSIS/Source/: Camera_Sensor_i2c.c  Camera_Sensor_i2c.h  DPHY_CSI2.c  DPHY_Common.c  DPHY_DSI.c  Driver_ADC.c  Driver_CAN.c  Driver_CDC200.c  Driver_CMP.c  Driver_CPI.c  Driver_CPI_Private.h  Driver_CRC.c  Driver_DAC.c  Driver_DMA.c  Driver_GPIO.c  Driver_GPIO_Private.h  Driver_HWSEM.c  Driver_I2C.c  Driver_I2C_Private.h  Driver_I2S.c  Driver_I2S_Private.h  Driver_I3C.c  Driver_I3C_I2C.c  Driver_I3C_Private.h  Driver_IO.c  Driver_IO_Private.h  Driver_ISP.c  Driver_ISP_Private.h  Driver_LPI2C.c  Driver_LPTIMER.c  Driver_LPTIMER_Private.h  Driver_MCI.c  Driver_MIPI_CSI2.c  Driver_MIPI_DSI.c  Driver_MRAM.c  Driver_MRAM_Private.h  Driver_OSPI.c  Driver_OSPI_Private.h  Driver_PDM.c  Driver_RTC.c  (+10 more)
Boards/AppKit-e7-aiml/Drivers/: vio_AppKit-E7-AIML.c  vstream_video_in.c
Boards/AppKit-e8/: board_defs.h
Boards/DevKit-e1c/: board_defs.h  pins.h
Boards/DevKit-e4/: board_defs.h  gpios.h  pins.h
Boards/DevKit-e7/: board_defs.h  pins.h
Boards/DevKit-e7/Drivers/: vio_DevKit-E7.c
Boards/DevKit-e8/: board_defs.h  gpios.h  pins.h
Boards/Templates/Baremetal/: ADC_Baremetal.c  ADC_Click_Board_Baremetal.c  ADC_Ext_Trigger_Baremetal.c  ADC_Potentiometer_Baremetal.c  BMI323_Baremetal.c  CANFD_BlockingMode.c  CANFD_Bus_Monitor.c  CANFD_Ext_Loopback.c  CANFD_Int_Loopback.c  CANFD_NormalMode.c  CDC200_Baremetal.c  CMP_baremetal.c  CRC_baremetal.c  DPHY_Loopback_Test_Baremetal.c  DPHY_Loopback_test.c  Dac_baremetal.c  Demo_SDIO_Baremetal.c  Demo_SD_Baremetal.c  Demo_SD_fatFS_Baremetal.c  Demo_pm_baremetal.c  FLASH_ISSI_Baremetal.c  GT911_Baremetal.c  HWSEM_Baremetal.c  I2S_Baremetal.c  I3C_Baremetal_masterside.c  I3C_Baremetal_slaveside.c  ICM42670P_Baremetal.c  LED_Breathe_Baremetal.c  LED_blink_baremetal.c  LPI2C_Baremetal.c  LPPDM_baremetal.c  LPSPI_SPI_baremetal.c  LPTimer_Baremetal.c  LPUART_Baremetal.c  MRAM_Baremetal.c  MW_Baremetal.c  PDM_baremetal.c  Parallel_Display_Baremetal.c  QEC_Baremetal.c  RTC_Baremetal.c  (+68 more)
Boards/Templates/FreeRTOS/: ADC_Click_Board_testapp.c  ADC_Ext_Trigger_testapp.c  CANFD_Bus_Monitor.c  CANFD_Ext_Loopback.c  CANFD_NormalMode.c  CMP_testApp.c  DAC_testapp.c  Flash_ISSI_FreeRTOS_app.c  HWSEM_FreeRTOS.c  LED_Blinky_testapp.c  LED_Breathe_app.c  LPI2C_TestApp.c  LPPDM_testApp.c  LPSPI_SPI_app.c  LPTimer_testApp.c  LPUART_testapp.c  MRAM_FreeRTOS.c  MW_app.c  PDM_testApp.c  SPI0_SPI1_app.c  TSENS_testapp.c  UTIMER_app.c  demo_adc_clickboard_freertos.c  demo_adc_exttrigger_freertos.c  demo_adc_freertos.c  demo_adc_potentiometer_freertos.c  demo_camera_arx3a0_freertos.c  demo_camera_mt9m114_freertos.c  demo_canfd_busmonitor_freertos.c  demo_canfd_extloopback_freertos.c  demo_canfd_intloopback_freertos.c  demo_canfd_normalmode_freertos.c  demo_cdc200_freertos.c  demo_cdc_freertos.c  demo_cmp_freertos.c  demo_crc_freertos.c  demo_dac_freertos.c  demo_display_parallel_freertos.c  demo_dma_memcpy_freertos.c  demo_flash_issi_freertos.c  (+37 more)
Boards/Templates/bayer2rgb/: bayer.c  bayer2rgb.c
Boards/Templates/cmsis_rtos2/: USBD_User_CDC_ACM.c  demo_mci_mdk_cmsisrtos2.c  mci-mdk-testApp.c
components/Include/: Driver_IMU.h  IS25WX256.h  S80K_HyperRAM.h  WM8904_Private.h  sensor_utils.h
components/Source/: BMI323_IMU.c  GT911_touch_driver.c  HM0360_camera_sensor.c  ICM42670P_IMU.c  ILI6122_LCD_panel.c  ILI9488_LCD_panel.c  ILI9806E_LCD_panel.c  IS25WX256.c  MT9M114_Camera_Sensor.c  OV5647_camera_sensor.c  OV5675_camera_sensor.c  S80K_HyperRAM.c  WM8904_codec_i2c.c  WM8904_driver.c  ar0144_camera_sensor.c  ar0145_camera_sensor.c  ar0246_camera_sensor.c  arx3A0_camera_sensor.c
docs/: Doxyfile  Overview.md  gen_doc.sh
drivers/include/: adc.h  canfd.h  cdc.h  cmp.h  cpi.h  crc.h  csi.h  dac.h  dma.h  dma_ctrl.h  dma_op.h  dsi.h  gpio.h  hwsem.h  i2c.h  i2s.h  i3c.h  lptimer.h  mhu_driver.h  ospi.h  ospi_hyperram_xip.h  pdm.h  pinconf.h  rtc.h  sd.h  sd_host.h  spi.h  sys_ctrl_adc.h  sys_ctrl_aes.h  sys_ctrl_analog.h  sys_ctrl_canfd.h  sys_ctrl_cdc.h  sys_ctrl_cmp.h  sys_ctrl_cpi.h  sys_ctrl_csi.h  sys_ctrl_dac.h  sys_ctrl_dma.h  sys_ctrl_dphy.h  sys_ctrl_dsi.h  sys_ctrl_eth.h  (+16 more)
drivers/source/: canfd.c  cdc.c  cmp.c  cpi.c  crc.c  i2c.c  i3c.c  lpi2c.c  ospi.c  ospi_hyperram_xip.c  pinconf.c  sd.c  sd_host.c  spi.c  sys_ctrl_analog.c  utimer.c
libs/board_config/: board_config.c  board_config.h
libs/conductor/: conductor_board_config.c  conductor_board_config.h
libs/isp/inc/: isp.h  (+21 more)
ospi_xip/app/: app_issi_flash.c
ospi_xip/config/: ospi_xip_user.h
scripts/: README.md  README.txt  build.sh  setup_user_env.sh
scripts/clang-format/: .clang-format
scripts/cmake/: CMakeLists.txt  CMakePresets.json  all_build.sh  build_stats.sh  packs_setup.sh  run.sh
scripts/cmake_rtss/: CMakeLists.txt  README.md  README.txt  utilities_func.cmake
scripts/cmake_rtss/device_cmake/: device.cmake
scripts/cmake_rtss/drivers_cmake/: bolt_drivers.cmake  drivers.cmake
scripts/cmake_rtss/filex_cmake/: azurertos_filex.cmake
scripts/cmake_rtss/host_services_cmake/: se_host_services.cmake
scripts/cmake_rtss/netxduo_cmake/: netxduo.cmake
scripts/cmake_rtss/os_cmake/: baremetal.cmake
scripts/cmake_rtss/toolchains/: compiler_config.cmake  toolchain.cmake
scripts/cmake_rtss/usbx_cmake/: usbx.cmake
se_services/include/: aipm.h  services_lib_api.h  services_lib_protocol.h
se_services/port/: clock_runtime.c  se_services_port.c
se_services/source/: services_host_clocks.c  services_host_cryptocell.c  services_host_extsys0.c  services_host_handler.c  services_host_power.c  services_host_system.c  services_host_update.c
se_services/templates/: m55_services_main.c  services_lib_interface.c  services_test.c  services_test_crypto.c
(+325 files in other folders)
